<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storeData.StoreDataActivity">

    <LinearLayout
        android:id="@+id/dataLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

        <EditText
            android:id="@+id/jerseyNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/jerseyNumber"
            android:inputType="number"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

    <EditText
        android:id="@+id/teamEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/team"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/conditionsCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conditions"
        android:textSize="20sp" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveButton"
        android:enabled="false" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>