<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".news.NewsActivity">

    <HorizontalScrollView
        android:layout_margin="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_1"
                android:text="@string/businessCategory"
                android:hint="business"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_2"
                android:text="@string/entertainmentCategory"
                android:hint="entertainment"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_3"
                android:text="@string/generalCategory"
                android:hint="general"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_4"
                android:text="@string/healthCategory"
                android:hint="health"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_5"
                android:text="@string/scienceCategory"
                android:hint="science"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_6"
                android:text="@string/sportsCategory"
                android:hint="sports"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_7"
                android:text="@string/technologyCategory"
                android:hint="technology"
                android:textSize="12sp"
                android:padding="6dp"
                android:layout_margin="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="@string/searchBar"
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" >

        </androidx.appcompat.widget.SearchView>
    </androidx.cardview.widget.CardView>
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/news_recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>