<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/purple_200"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:id="@+id/musicPlayerEditText"
            android:layout_marginTop="20dp"
            android:hint="@string/musicPlayerText"
            android:background="@color/purple_500"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:padding="6dp"
            android:inputType="textPersonName"
            android:textAlignment="viewStart"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/musicPlayerButton"
            android:onClick="goToMusicPlayerActivity"
            android:text="@string/musicPlayerButton"
            android:layout_marginTop="35dp"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/dataStorageButton"
            android:onClick="goToStoreData"
            android:text="@string/dataStoreButton"
            android:layout_marginVertical="70dp"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/newsButton"
            android:onClick="goToNews"
            android:text="@string/newsButton"
            android:layout_marginVertical="70dp"
            android:layout_marginHorizontal="100dp"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
    </LinearLayout>

</LinearLayout>